<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.TaskEntryFragment">

    <data>

        <variable
            name="task"
            type="com.gaugustini.listio.database.Task" />

        <variable
            name="editing"
            type="boolean" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@{editing}" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="32dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="32dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/title"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/toolbar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_txt"
                        task="@{task.title}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/date"
                    app:layout_constraintEnd_toStartOf="@id/hour"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_txt"
                        task="@{task.date}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hour"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toEndOf="@id/date"
                    app:layout_constraintTop_toTopOf="@id/date"
                    app:startIconDrawable="@drawable/ic_timer">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hour_txt"
                        task="@{task.hour}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_txt"
                        task="@{task.description}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_save"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
